[lworld] Aarch64: Fix fast class initialization checks after merge

XMLWordPrintable

      We need to port the following changes to lworld:

      Implement fast class initialization checks:
      https://bugs.openjdk.java.net/browse/JDK-8223173
      https://bugs.openjdk.java.net/browse/JDK-8223213

      JNI upcalls should bypass class initialization barrier in c2i adapter
      https://bugs.openjdk.java.net/browse/JDK-8227260


      Because the code is missing in lworld, runtime/clinit/ClassInitBarrier.java fails with guarantee(callee != NULL && callee->is_method()) failed: bad handshake

      See here:
      https://hg.openjdk.java.net/valhalla/valhalla/file/ff8e4784d98c/src/hotspot/share/runtime/sharedRuntime.cpp#l1499
      https://hg.openjdk.java.net/valhalla/valhalla/file/ff8e4784d98c/src/hotspot/cpu/aarch64/sharedRuntime_aarch64.cpp#l993

            Assignee:
            Dmitriy Samersoff
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: