8230962: Aarch64 Fix fast class initialization checks after merge

Reviewed-by: thartmann